src/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>BrandContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MasterBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>BrandVariants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteURL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Brand</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Brand__c.Brand</value>
        </filters>
        <label>Brand</label>
    </listViews>
    <listViews>
        <fullName>BrandVariant</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Brand__c.BrandVariant</value>
        </filters>
        <label>Brand Variant</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <recordTypes>
        <fullName>Brand</fullName>
        <active>true</active>
        <description>Represents the highest level of a Brand tree.</description>
        <label>Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>BrandVariant</fullName>
        <active>true</active>
        <description>Represents a grouping brand of other grouping brands or brand leafs.</description>
        <label>Brand Variant</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
</CustomObject>